[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/level1WaveBased/waveStarter.gd" type="Script" id=1]
[ext_resource path="res://levels/level1WaveBased/DiveZoneExtents.gd" type="Script" id=2]

[node name="waveStarter" type="Node2D"]
script = ExtResource( 1 )

[node name="viewport_hint" type="Polygon2D" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -320, -180, -320, 180, 320, 180, 320, -180 )

[node name="GruntFormationPoints" type="Node2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="C" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 109, -129 )

[node name="D" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 175, -52 )

[node name="L" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 176, 77 )

[node name="M" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 110, 135 )

[node name="DiveZoneExtents" type="Node2D" parent="."]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( -297, -168 )
BottomRight = Vector2( -70, 181 )

[node name="TopLeft" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -297, -168 )

[node name="BottomRight" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -70, 181 )

[node name="Spawners" type="Node2D" parent="."]
modulate = Color( 0.992157, 0.0823529, 1, 1 )

[node name="Position2D3" type="Position2D" parent="Spawners"]
position = Vector2( 54, 2 )

[node name="EnemyDump" type="Node2D" parent="."]

[node name="BulletsDump" type="Node2D" parent="."]
